<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danil.androidcourses.firstapp.FirstAppActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_title_first_app"
        android:text="@string/text_title"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />


    <TextView
        android:id="@+id/text_changed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_changed_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.140" />

    <Button
        android:id="@+id/btn_change_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btn_start"
        android:layout_marginTop="@dimen/margin_btn"
        android:text="@string/btn_change_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_changed_text"
        android:layout_marginLeft="@dimen/margin_btn_start" />

    <Button
        android:id="@+id/btn_change_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_btn_start"
        android:layout_marginTop="@dimen/margin_btn"
        android:onClick="doSomething"
        android:text="@string/btn_change_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_text1"
        android:layout_marginLeft="@dimen/margin_btn_start" />

</android.support.constraint.ConstraintLayout>
